bug fix (perl text was not visible when the whole node was selected)

--- a/xml/editor/loncapa_daxe/web/loncapa_daxe.css
+++ b/xml/editor/loncapa_daxe/web/loncapa_daxe.css
@@ -141,6 +141,10 @@ span.math-error {
   visibility: visible;
 }
 
+.selected .perl-text {
+  visibility: visible;
+}
+
 .perl-colored {
   z-index: -1;
   visibility: visible;
